crates/parser/tests/cases/snapshots/cases__errors__contract_invalid_version_requirement.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(contract_invalid_version_requirement),\n    module::parse_module, r#\"\npragma 0.o\ncontract C {}\"#)"

---
error: failed to parse pragma statement: unexpected character 'o' while parsing minor version number
  ┌─ contract_invalid_version_requirement:2:8
  │
2 │ pragma 0.o
  │        ^^^ Invalid version requirement
  │
  = Example: `^0.5.0`


